testsuite/veronac/codegen/compile-fail/main-is-interface.out/stderr.txt
main-is-interface.verona:4:11: error: 'Main' must be a class
interface Main {
          ^~~~
1 error generated
